updated notebook oct/23/18 Please enter the commit message for your changes. Lines starting

--- a/MLWB_mockup_noML.ipynb
+++ b/MLWB_mockup_noML.ipynb
@@ -56,7 +56,8 @@
    ],
    "source": [
     "!pip install msgpack\n",
-    "!pip install lasio"
+    "!pip install lasio\n",
+    "!pip awscli"
    ]
   },
   {
@@ -90,7 +91,7 @@
     "import boto3\n",
     "from sagemaker import get_execution_role\n",
     "\n",
-    "role = get_execution_role()\n",
+    "#role = get_execution_role()\n",
     "region = boto3.Session().region_name\n",
     "\n",
     "bucket='sdu-machine-learning'\n",
@@ -260,7 +261,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define output folder. if not exist create one\n",
     "outdir = 'output/'\n",
+    "if not os.path.exists(outdir):\n",
+    "    os.makedirs(outdir)\n",
+    "\n",
     "fout = outdir+'GC110-1-SHELL_vpAI.las'\n",
     "las.write(fout, version=2.0)"
    ]
@@ -311,9 +316,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
