--- a/MLWB_mockup_noML.ipynb
+++ b/MLWB_mockup_noML.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,6 +46,41 @@
       "Requirement already satisfied: numpy in c:\\apps\\anaconda\\lib\\site-packages (from lasio) (1.14.3)\n",
       "Requirement already satisfied: ordereddict in c:\\apps\\anaconda\\lib\\site-packages (from lasio) (1.1)\n",
       "Requirement already satisfied: cchardet in c:\\apps\\anaconda\\lib\\site-packages (from lasio) (2.1.4)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using pip version 18.0, however version 18.1 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting awscli\n",
+      "  Downloading https://files.pythonhosted.org/packages/c9/e7/ab100a4badf513c5ea15a0717e2abc78abd08fb6761391e1e3a0b048aba5/awscli-1.16.39-py2.py3-none-any.whl (1.4MB)\n",
+      "Requirement already satisfied: colorama<=0.3.9,>=0.2.5 in c:\\apps\\anaconda\\lib\\site-packages (from awscli) (0.3.9)\n",
+      "Requirement already satisfied: s3transfer<0.2.0,>=0.1.12 in c:\\apps\\anaconda\\lib\\site-packages (from awscli) (0.1.13)\n",
+      "Requirement already satisfied: PyYAML<=3.13,>=3.10 in c:\\apps\\anaconda\\lib\\site-packages (from awscli) (3.12)\n",
+      "Collecting botocore==1.12.29 (from awscli)\n",
+      "  Downloading https://files.pythonhosted.org/packages/80/46/acc73473250b70bc5f9c2268865a7f6e84b08f8824726eb7badd8665ca91/botocore-1.12.29-py2.py3-none-any.whl (4.7MB)\n",
+      "Collecting rsa<=3.5.0,>=3.1.2 (from awscli)\n",
+      "  Downloading https://files.pythonhosted.org/packages/e1/ae/baedc9cb175552e95f3395c43055a6a5e125ae4d48a1d7a924baca83e92e/rsa-3.4.2-py2.py3-none-any.whl (46kB)\n",
+      "Requirement already satisfied: docutils>=0.10 in c:\\apps\\anaconda\\lib\\site-packages (from awscli) (0.14)\n",
+      "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in c:\\apps\\anaconda\\lib\\site-packages (from botocore==1.12.29->awscli) (0.9.3)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1; python_version >= \"2.7\" in c:\\apps\\anaconda\\lib\\site-packages (from botocore==1.12.29->awscli) (2.7.3)\n",
+      "Requirement already satisfied: urllib3<1.25,>=1.20; python_version >= \"3.4\" in c:\\apps\\anaconda\\lib\\site-packages (from botocore==1.12.29->awscli) (1.22)\n",
+      "Collecting pyasn1>=0.1.3 (from rsa<=3.5.0,>=3.1.2->awscli)\n",
+      "  Downloading https://files.pythonhosted.org/packages/d1/a1/7790cc85db38daa874f6a2e6308131b9953feb1367f2ae2d1123bb93a9f5/pyasn1-0.4.4-py2.py3-none-any.whl (72kB)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\apps\\anaconda\\lib\\site-packages (from python-dateutil<3.0.0,>=2.1; python_version >= \"2.7\"->botocore==1.12.29->awscli) (1.11.0)\n",
+      "Installing collected packages: botocore, pyasn1, rsa, awscli\n",
+      "  Found existing installation: botocore 1.12.12\n",
+      "    Uninstalling botocore-1.12.12:\n",
+      "      Successfully uninstalled botocore-1.12.12\n",
+      "Successfully installed awscli-1.16.39 botocore-1.12.29 pyasn1-0.4.4 rsa-3.4.2\n"
      ]
     },
     {
