--- a/MLWB_mockup_noML.ipynb
+++ b/MLWB_mockup_noML.ipynb
@@ -107,9 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 7.95 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "import matplotlib.pyplot as plt\n",
@@ -149,11 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "File association not found for extension .py\n",
+      "fatal error: Unable to locate credentials\n"
+     ]
+    }
+   ],
    "source": [
     "lasfile = 'GC110-1-SHELL.las'\n",
     "lasfile_s3 = bucket_path+prefix+lasfile\n",
